--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 languageCode = "en-us"
 title = "Olivier Ligot - Blog"
 baseurl = "https://www.oligot.be/"
+theme = "after-dark"
 
 [params]
   author = "Olivier Ligot"
