--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/after-dark"]
-	path = themes/after-dark
-	url = https://github.com/comfusion/after-dark
+[submodule "themes/cactus-plus"]
+	path = themes/cactus-plus
+	url = https://github.com/nodejh/hugo-theme-cactus-plus.git
