--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 languageCode = "en-us"
 title = "Olivier Ligot - Blog"
 baseURL = "https://www.oligot.be/"
+enableEmoji = true
 
 [module]
   [[module.imports]]
